# geometry

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
src/: Circle.c  Circle.cpp  Circle.h  Figure.c  Figure.cpp  Figure.h  Intersection.c  Intersection.h  main.c  main.cpp
test/: main.c  test_intersection.c
